--- a/user-service/package.json
+++ b/user-service/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.8.2"
+    "mongoose": "^8.0.1",
+    "mongodb": "^6.3.0"
   }
 }
